infrastructure/kubernetes/vault-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: default
spec:
  selector:
    app: vault
  ports:
  - port: 8200
    targetPort: 8200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-client
  template:
    metadata:
      labels:
        app: vault-client
    spec:
      serviceAccountName: maily-app
      containers:
      - name: vault-client
        image: hashicorp/vault:1.15.2
        command: ["sh", "-c", "while true; do sleep 3600; done"]
